; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/libntp/extr_ntp_calendar.c_basedate_get_eracenter.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/libntp/extr_ntp_calendar.c_basedate_get_eracenter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@s_baseday = common dso_local global i64 0, align 8
@NTP_TO_UNIX_DAYS = common dso_local global i64 0, align 8
@SECSPERDAY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @basedate_get_eracenter() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* @s_baseday, align 8
  %3 = load i64, i64* @NTP_TO_UNIX_DAYS, align 8
  %4 = sub nsw i64 %2, %3
  %5 = trunc i64 %4 to i32
  store i32 %5, i32* %1, align 4
  %6 = load i32, i32* @SECSPERDAY, align 4
  %7 = load i32, i32* %1, align 4
  %8 = mul nsw i32 %7, %6
  store i32 %8, i32* %1, align 4
  %9 = call i32 @UINT32_C(i32 1)
  %10 = shl i32 %9, 31
  %11 = load i32, i32* %1, align 4
  %12 = add nsw i32 %11, %10
  store i32 %12, i32* %1, align 4
  %13 = load i32, i32* %1, align 4
  ret i32 %13
}

declare dso_local i32 @UINT32_C(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
